# ColourSpaceTransformation

./: CMakeLists.txt
include/: CharImage.h  ColorSpace.h  ColorSpaceConverter.h  FloatImage.h  Image.h  ImageFactory.h
src/: CharImage.cpp  ColorSpaceConverter.cpp  FloatImage.cpp  Image.cpp  ImageFactory.cpp  main.cpp
